--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "e-commerce-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://md-ishmam-iqbal.github.io/E-commerce-Chaldal-clone-_PF/",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy" : "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
